# xenofrost

./: Cargo.toml  index.html
macros/: Cargo.toml
macros/src/: component_macros.rs  lib.rs  macro_utilities.rs  query_macros.rs  resource_macros.rs
res/fonts/: opensans-sdf.json  opensans.json
res/shaders/: atlas_shader2d.wgsl  bitmap_font.wgsl  debug_lines_shader2d.wgsl  debug_shapes_shader2d.wgsl  gui.wgsl  model_shader2d.wgsl  sdf_font.wgsl  shader.wgsl
src/: core.rs  lib.rs  main.rs  shader.wgsl
src/core/: app.rs  engine.rs  input_manager.rs  math.rs  render_engine.rs  utilities.rs  window_handler.rs  world.rs
src/core/input_manager/: winit_converter.rs
src/core/math/: bounding2d.rs
src/core/render_engine/: buffer.rs  camera.rs  gui.rs  material.rs  mesh.rs  pipeline.rs  render_camera.rs  texture.rs
src/core/render_engine/gui/: font_renderer.rs  widgets.rs
src/core/render_engine/gui/widgets/: gui_rect.rs
src/core/world/: camera.rs  component.rs  resource.rs
