[package]
name = "xenofrost"
version = "0.1.0"
edition = "2024"

[dependencies]
xenofrost_macros = { path = "macros", version = "0.1.0" }
cfg-if = "1"
winit = {version = "0.30", features = ["rwh_05"]}
wgpu = "22.0"
bytemuck = {version = "1.16", features = ["derive"] }
glam = "0.28"
pollster = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = {version = "22.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = {version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[lib]
crate-type = ["cdylib", "rlib"]